--- a/source/scss/ui.scss
+++ b/source/scss/ui.scss
@@ -37,8 +37,8 @@
 }
 
 form {
-    display: flex;
-    flex-direction: row;
+    width: 100%;
+    padding: 0 5%;
 
     input {
         width: 100%;
