--- a/source/scss/ui.scss
+++ b/source/scss/ui.scss
@@ -47,6 +47,7 @@ form {
         width: 100%;
         border: none;
         // background-color: lightgrey;
+        cursor: move;
     }
 
     input::placeholder {
