--- a/source/scss/ui.scss
+++ b/source/scss/ui.scss
@@ -11,7 +11,6 @@
     .title-child {
         max-width: 300px;
         margin: 50px;
-        flex-grow: 6;
         display: flex;
         flex-direction: row;
         align-items: baseline;
@@ -38,16 +37,20 @@
 
 form {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     width: 100%;
     padding: 0 5%;
 
-    input {
-        flex: 50%;
+    .drag-item {
+        flex: 75%;
         width: 100%;
-        border: none;
-        // background-color: lightgrey;
-        cursor: move;
+
+        input {
+            width: 96%;
+            border: none;
+            // background-color: lightgrey;
+            cursor: move;
+        }
     }
 
     input::placeholder {
