--- a/source/scss/ui.scss
+++ b/source/scss/ui.scss
@@ -56,6 +56,14 @@ input {
     width: 90%
 }
 
+input:focus::placeholder {
+    color: transparent;
+}
+
 #done {
     text-decoration: line-through;
+}
+
+.btn {
+    margin-left: 15px;
 }
