--- a/source/scss/ui.scss
+++ b/source/scss/ui.scss
@@ -1,5 +1,5 @@
 .box {
-    max-width: 80%;
+    // max-width: 80%;
     padding: 10%;
 }
 
@@ -11,6 +11,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    margin-bottom: 5px;
 
     .title-child {
         max-width: 300px;
@@ -38,9 +39,7 @@
     color: darkgrey;
 }
 
-#form {
-    display: flex;
-    flex-wrap: wrap;
+.inputs {
     width: 100%;
     padding: 0 5%;
 
@@ -56,7 +55,6 @@ ul {
 
 input {
     flex: 90%;
-    width: 90%
 }
 
 input:focus::placeholder {
@@ -65,8 +63,17 @@ input:focus::placeholder {
 
 #done {
     text-decoration: line-through;
+    color: red;
 }
 
 .btn {
     margin-left: 15px;
+}
+
+.dropzone {
+    min-width: fit-content;
+}
+
+.task {
+    width: 75%;
 }
